# eager

./: .buildinfo  .cookiecutter.yaml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Justfile  LICENSE  README.md  SETUP.md  contributing.html  eda.ipynb  genindex.html  github-rs-classifier.ipynb  index.html  installation.html  irr_stats.txt  modules.html  objects.inv  py-modindex.html  pyproject.toml  quick-setfit-model.ipynb  search.html  searchindex.js  soft_search.bin.html  soft_search.data.html  soft_search.html  soft_search.label.html  tfidf-models.ipynb
.doctrees/: contributing.doctree  environment.pickle  index.doctree  installation.doctree  modules.doctree  soft_search.bin.doctree  soft_search.data.doctree  soft_search.doctree  soft_search.label.doctree
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
_modules/: index.html
_modules/soft_search/: constants.html  label.html  metrics.html  nsf.html  seed.html
_modules/soft_search/data/: irr.html  soft_search_2022.html
_modules/soft_search/label/: model_selection.html  regex.html  semantic_logit.html  tfidf_logit.html  transformer.html
_sources/: index.rst.txt  installation.rst.txt  modules.rst.txt  soft_search.bin.rst.txt  soft_search.data.rst.txt  soft_search.label.rst.txt  soft_search.rst.txt
_static/: documentation_options.js  paper.html
_static/site_libs/bootstrap/: bootstrap.min.css
data/: filtered-nsf-awards.csv  filtered-nsf-awards.parquet  keyword-search.csv  nsf-awards.csv  nsf-awards.parquet
docs/: conf.py  index.rst  installation.rst  make.bat
docs/_static/: paper.docx  paper.html  search.json
gh-search/: get-gh-results.py
paper/: Justfile  README.md  environment.yml  paper.qmd
paper/support/: main.bib
scripts/: get-data.R  get-data.py  requirements.R  requirements.txt  select-awards.py
soft_search/: __init__.py  constants.py  metrics.py  nsf.py  seed.py
soft_search/data/: __init__.py  gh-repo-annotations-lindsey.csv  gh-repo-annotations-richard.csv  gh-search-results-duplicates-removed.csv  irr.py  linked-github-nsf-results.parquet  nsf.py  soft-search-2022-irr-50.parquet  soft-search-2022-irr.parquet  soft-search-2022-labelled.parquet  soft_search_2022.py
soft_search/label/: __init__.py  model_selection.py  regex.py  semantic_logit.py  tfidf_logit.py  transformer.py
soft_search/tests/: test_example.py  test_nsf.py
soft_search/tests/data/: test_irr.py
soft_search/tests/label/: test_regex.py  test_semantic_logit.py  test_tfidf_logit.py  test_transformer.py
