# package build
# https://peps.python.org/pep-0517/
[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

# package basics
# https://peps.python.org/pep-0621/
[project]
name = "soft-search"
description = "searching for software promises in grant applications"
keywords = []
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT License" }
authors = [
  { email = "jmxbrown@uw.edu", name = "Eva Maxfield Brown" },
]
classifiers = [
  "Development Status :: 4 - Beta",
        "Natural Language :: English",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
]
dynamic = ["version"]
dependencies = [
  "pandas~=1.4",
  "pyarrow~=9.0",
]

[project.urls]
Homepage = "https://github.com/PugetSoundClinic-PIT/soft-search"
"Bug Tracker" = "https://github.com/PugetSoundClinic-PIT/soft-search/issues"
Documentation = "https://PugetSoundClinic-PIT.github.io/soft-search"
"User Support" = "https://github.com/PugetSoundClinic-PIT/soft-search/issues"

# extra dependencies
# https://peps.python.org/pep-0621/#dependencies-optional-dependencies
[project.optional-dependencies]
nsf = [
  "requests~=2.28",
]
transformer = [
  "datasets~=2.4",
  "scikit-learn~=1.1",
  "torch~=1.12",
  "transformers~=4.21",
]
lint = [
  "black>=22.3.0",
  "flake8>=3.8.3",
  "flake8-debugger>=3.2.1",
  "flake8-pyprojecttoml",
  "flake8-typing-imports>=1.9.0",
  "isort>=5.7.0",
  "mypy>=0.790",
  "pre-commit>=2.20.0",
  "types-requests~=2.28",
]
test = [
  "coverage>=5.1",
  "pytest>=5.4.3",
  "pytest-cov>=2.9.0",
  "pytest-raises>=0.11",
]
docs = [
  "m2r2>=0.2.7",
  "Sphinx>=4.0.0",
  "furo>=2022.4.7",
  # Extensions
  "numpydoc",
  "sphinx-click",
  "sphinx-copybutton",
  "sphinx-remove-toctrees",
  "sphinx_autosummary_accessors",
  "sphinx-tabs",
  "sphinx-design",
]
dev = [
  "ipython>=8.4.0",
  "matplotlib>=3.5.2",
]

# entry points
# https://peps.python.org/pep-0621/#entry-points
[project.entry-points."console_scripts"]
get-nsf-award-set-for-soft-search-2022 = "soft_search.bin.get_nsf_award_set_for_soft_search_2022:main"
train-and-package-soft-search-2022-transformer = "soft_search.bin.train_and_package_soft_search_2022_transformer:main"

# build settings
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[tool.setuptools]
zip-safe = false
include-package-data = true
packages = { find = { exclude = ["tests"] } }

[tool.setuptools.package-data]
"*" = ["*.parquet", "*.json", "*.bin", "*.txt", "py.typed"]

# tools
[tool.black]
line-length = 88

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
profile = "black"
use_parentheses = true

# https://github.com/mgedmin/check-manifest#configuration
[tool.check-manifest]
ignore = [
  ".editorconfig",
  ".pre-commit-config.yaml",
  "CODE_OF_CONDUCT.md",
  "CONTRIBUTING.md",
  "Justfile",
  ".cookiecutter.yaml",
  "docs/*",
]

[tool.mypy]
files = "soft_search/*.py"
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
show_error_codes = true

# https://flake8.pycqa.org/en/latest/user/options.html
# https://gitlab.com/durko/flake8-pyprojecttoml
[tool.flake8]
max-line-length = 88
ignore = "E203,E402,W291,W503"
min-python-version = "3.8.0"
per-file-ignores = [
  "__init__.py:F401",
]