# package build
# https://peps.python.org/pep-0517/
[build-system]
requires = ["setuptools>=65", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

# package basics
# https://peps.python.org/pep-0621/
[project]
name = "soft-search"
description = "searching for software promises in grant applications"
keywords = []
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT License" }
authors = [
  { email = "evamxb@uw.edu", name = "Eva Maxfield Brown" },
  { email = "nmweber@uw.edu", name = "Nic Weber" },
  { email = "lsschwar@uw.edu", name = "Lindsey Schwartz" },
  { email = "lwhuang@uw.edu", name = "Richard Lewei Huang" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]
dynamic = ["version"]
dependencies = [
  "beautifulsoup4~=4.11",
  "dataclasses-json~=0.5",
  "datasets~=2.0",
  "embetter[sentence-tfm]~=0.3.1",
  "ghapi~=1.0",
  "pandas~=1.4",
  "pyarrow~=9.0",
  "python-dotenv~=0.21",
  "requests~=2.28",
  "scikit-learn~=1.1",
  "statsmodels~=0.13.2",
  "torch~=1.12",
  "tqdm~=4.64",
  "transformers~=4.21",
]

[project.urls]
Homepage = "https://github.com/si2-urssi/eager"
"Bug Tracker" = "https://github.com/si2-urssi/eager/issues"
Documentation = "https://si2-urssi.github.io/eager"
"User Support" = "https://github.com/si2-urssi/eager/issues"

# extra dependencies
# https://peps.python.org/pep-0621/#dependencies-optional-dependencies
[project.optional-dependencies]
lint = [
  "black>=22.3.0",
  "check-manifest>=0.48",
  "ruff>=0.0.216",
  "mypy>=0.790",
  "pre-commit>=2.20.0",
  "types-requests~=2.28",
]
test = [
  "coverage>=5.1",
  "pytest>=5.4.3",
  "pytest-cov>=2.9.0",
  "pytest-raises>=0.11",
]
docs = [
  # Sphinx + Doc Gen + Styling
  "m2r2>=0.2.7",
  "Sphinx>=4.0.0",
  "furo>=2022.4.7",
  # Extensions
  "numpydoc",
  "sphinx-copybutton",
  # TODO: Pins
  "docutils>=0.18,<0.19",
]
dev = [
  "ipython>=8.4.0",
  "matplotlib>=3.5.2",
]

# entry points
# https://peps.python.org/pep-0621/#entry-points
[project.entry-points."console_scripts"]
get-github-repositories-with-nsf-ref = "soft_search.bin.get_github_repositories_with_nsf_ref:main"
generate-nsf-soft-search-2022-dataset = "soft_search.bin.generate_nsf_soft_search_2022_dataset:main"
find-nsf-award-ids-in-github-readmes-and-link = "soft_search.bin.find_nsf_award_ids_in_github_readmes_and_link:main"
fit-and-eval-all-models = "soft_search.bin.fit_and_eval_all_models:main"

# build settings
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["*docs/*", "*tests/*"]

[tool.setuptools.package-data]
"*" = [
  "*.parquet",
  "*.json",
  "*.bin",
  "*.csv",
  "*.txt",
  "*.yaml",
  "*.pkl",
  "py.typed",
]

# tools
[tool.black]
line-length = 88

# https://github.com/charliermarsh/ruff
[tool.ruff]
line-length = 88
target-version = "py38"
extend-select = [
    "E",      # style errors
    "F",      # flakes
    "D",      # pydocstyle
    "I001",   # isort
    "UP",     # pyupgrade
    "N",      # pep8-naming
    # "S",    # bandit
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "A001",   # flake8-builtins
    "RUF",    # ruff-specific rules
    "RUF100", # Unused noqa directive
]
extend-ignore = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D103", # Missing docstring in public function
    "D107", # Missing docstring in __init__
    "D203", # 1 blank line required before class docstring
    "D205", # 1 blank line required between summary line and description
    "D212", # Multi-line docstring summary should start at the first line
    "D213", # Multi-line docstring summary should start at the second line
    "D413", # Missing blank line after last section
    "D416", # Section name should end with a colon
]

[tool.ruff.per-file-ignores]
"tests/*.py" = ["D"]

# https://github.com/mgedmin/check-manifest#configuration
[tool.check-manifest]
ignore = [
  ".editorconfig",
  ".pre-commit-config.yaml",
  "CODE_OF_CONDUCT.md",
  "CONTRIBUTING.md",
  "Justfile",
  ".cookiecutter.yaml",
  "*docs/*",
  "*soft-search-2022-transformer/*",
  "*soft-search-transformer/*",
  "*htmlcov/*",
  "*paper/**",
  "*paper.docx",
  "*paper.html",
  "*paper.pdf",
]

[tool.mypy]
files = "soft_search/*.py"
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
show_error_codes = true